migrated to typescript

--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
     <script type="text/javascript" src="game/helper.js"></script>
     <script type="text/javascript" src="game/models.js"></script>
     <script type="text/javascript" src="game/game.js"></script>
+    <script type="text/javascript" src="game/gameView.js"></script>
+    <script type="text/javascript" src="game/editGameView.js"></script>
+    <script type="text/javascript" src="game/mapView.js"></script>
 </body>
 </html>
